create_model,seeds,controller,routes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,270 @@
  *= require_tree .
  *= require_self
  */
+
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Kiwi+Maru&family=RocknRoll+One&family=Zen+Kurenaido&family=Zen+Maru+Gothic&display=swap');
+@import 'bootstrap';
+@import "font-awesome";
+
+body {
+  margin: 0;
+  font-family: "Zen Maru Gothic", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #212529;
+  text-align: left;
+  background-color: #FCF9F1;
+}
+
+// ＝＝＝＝
+// home,mypage画面　タブ表示
+// ＝＝＝＝
+
+// タブ切り替え
+.tab-list {
+  display: flex;
+}
+.tab {
+  width: 50%;
+  padding: 10px;
+  cursor: pointer;
+  border-left: solid 1px #CCC;
+  border-bottom: solid 1px #CCC;
+  text-align: center;
+  background-color: #FFFAB7;
+ font-size: 1.4rem;
+  font-weight: 400;
+  box-shadow: 0 4px 7px 0 #888;
+}
+.tab:first-child {
+  border-left: none;
+}
+// タブがactiveのとき
+.tab-active {
+  color: #fff;
+  font-weight: 400;
+  font-size: 2.0rem;
+  background: #7BD3EA;
+  transition: all 0.2s ease-in-out;
+}
+// タブの中身、最初は非表示
+.tabbox {
+  display: none;
+  padding: 15px;
+}
+// hover時
+.tab:hover{
+  box-shadow: 0 10px 10px 0 #999;
+  transform: translateY(-1px);
+}
+// box-showクラスのものだけ表示
+.box-show {
+  display: block;
+}
+
+// ======
+// タブ切り替えマイページ
+// ======
+
+  .mytab-list {
+    display: flex;
+  }
+  .mytab {
+    width: 50%;
+    padding: 10px;
+    cursor: pointer;
+    border-left: solid 1px #CCC;
+    border-bottom: solid 1px #CCC;
+    text-align: center;
+    background-color: #FFFAB7;
+    font-size: 1.4rem;
+    font-weight: 400;
+    box-shadow: 0 4px 7px 0 #888;
+  }
+  .mytab:first-child {
+    border-left: none;
+  }
+// タブがactiveのとき
+  .mytab-active {
+    color: #fff;
+    font-weight: 400;
+    font-size: 2.0rem;
+    background: #7BD3EA;
+    transition: all 0.2s ease-in-out;
+  }
+// タブの中身、最初は非表示
+  .mytabbox {
+    display: none;
+    padding: 15px;
+  }
+// hover時
+  .mytab:hover{
+    box-shadow: 0 10px 10px 0 #999;
+    transform: translateY(-1px);
+  }// box-showクラスのものだけ表示
+  .mybox-show {
+    display: block;
+  }
+
+
+// =========
+// ボタン設定
+// =========
+.logout-color {
+  color: #483434;
+  font-weight: 400;
+  font-size: 1.0rem;
+  border-style: none;
+  width: 30px;
+  padding: 15px;
+  text-align: right;
+  border-radius: 20px;
+  background-color: #FFf;
+  border: 1px #FFf solid;
+  margin-bottom: 30px;
+}
+.submit-color {
+  display: block;
+  color: #483434;
+  font-weight: 400;
+  font-size: 1.3rem;
+  border-style: none;
+  padding: 25px;
+  border-radius: 50%;
+  background-color: #FFD1E3;
+  border: 1px #FFD1E3;
+  width: 20%;
+  text-align: center;
+  margin: auto;
+}
+.link-list {
+  display: block;
+  list-style: none;
+  line-height: 4.5rem;
+  margin: 20px;
+}
+.link-color {
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.1rem;
+  border-style: none;
+  width: 30px;
+  padding: 15px;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #67C6E3;
+  border: 1px #67C6E3 solid;
+}
+
+// 一覧ページ
+.link-btn {
+  color: #fff;
+  font-weight: 400;
+  font-size: 1.4rem;
+  border-style: none;
+  width: 20px;
+  padding: 6px;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #67C6E3;
+  border: 1px #67C6E3 solid;
+}
+
+// リンク時の下線をなくす
+.link-color:hover,
+.submit-color:hover,
+.link-btn:hover,
+.logout-color:hover,
+.admin-logout:hover{
+  text-decoration: none;
+  color:rgba(152, 91, 91, 0.5)
+}
+.home-btn:hover{
+  text-decoration: none;
+}
+.home-btn {
+    color: #212529;
+}
+
+
+// 画面ごと
+.show {
+  color: #212529;
+}
+// やりたいこと新規
+.new {
+  display: block;
+  font-size: 1.6rem;
+  width: 20%;
+  padding: 20px;
+  margin: 30px auto;
+}
+.back {
+  display: block;
+  width: 30%;
+  padding: 20px;
+  margin: 30px auto;
+}
+.name {
+  padding: 10px;
+  width: 30%;
+}
+.name-btn {
+  display: block;
+  margin: auto;
+}
+
+
+// ===================
+// マイページ_月別、年別
+// ===================
+.card {
+  margin: 0 auto 60px;
+  max-width: 376px;
+  height: 370px;
+}
+.card-body p {
+  text-align: center;
+}
+.category_list {
+  list-style: none;
+}
+
+//　ユーザーログイン画面
+.home {
+  font-size: larger;
+  text-align: center;
+}
+
+// 管理者ページ
+.admin {
+  background-color: #FCF9F1;
+  font-size: 1.3rem;
+}
+.admin-logout {
+  color: #212529;
+  font-size: 1.0rem;
+}
+.admin-color {
+  background-color: #FCF9F1;
+}
+
+// 画面調整
+.center {
+  display: block;
+  margin: 20px auto;
+}
+.card-title,.card-text {
+  text-align: center;
+}
+.right {
+  text-align: right;
+}
+.mycard {
+  width: 800px;
+}
+.setting {
+  text-align: right;
+  color: #212529;
+}
