--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Soda</title>
+    <title>おうちアプリ</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,11 @@
   </head>
 
   <body>
-    <%= yield %>
+    <main>
+    <% if flash.notice %>
+      <p><%= flash.notice %></p>
+    <% end %>
+      <%= yield %>
+    </main>
   </body>
 </html>
