--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,13 +10,15 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require simple_calendar
  *= require_tree .
  *= require_self
  */
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Kiwi+Maru&family=RocknRoll+One&family=Zen+Kurenaido&family=Zen+Maru+Gothic&display=swap');
 @import 'bootstrap';
-@import "font-awesome";
+@import 'font-awesome';
+@import 'simple_calendar';
 
 body {
   margin: 0;
