create_admin_login

--- a/app/views/wants/index.html.erb
+++ b/app/views/wants/index.html.erb
@@ -23,7 +23,7 @@
             <td><%= image_tag want.image.thumb50.url %>
             <td></td>
             <td><%= link_to "編集", edit_want_path(want.id), class: "link-btn show" %></td>
-            <td><%= link_to "削除", want_path(want.id), method: :delete, data: { confirm: '本当に削除しますか？' }, class:"link-btn show" %></td>
+            <td><%= link_to "削除", want_path(want.id), method: :delete, data: { confirm: '本当に削除しますか？' }, class:"link-btn" %></td>
             <td></td>
           </tr>
           <tr></tr>
