setting_edit_username

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
       </ul>
     </div>
     <div class="col-sm-9 setting">
-        <%= link_to edit_users_path do %>
+        <%= link_to edit_user_path(current_user) do %>
           <h3><i class="fa-solid fa-bars" style="color: #212529;"></i></h3>
           <h3><i class="fa-regular fa-face-smile" style="color: #212529;"></i></h3>
         <% end %>
