--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -11,11 +11,11 @@
   <div>
     <%= f.label :price, "金額　" %>
     <%= f.number_field :price %>
-  </div>
+  </div></br>
   <div>
     <%= f.label :memo, "メモ　" %>
     <%= f.text_field :memo %>
-  </div>
+  </div></br>
 
   <div>
     <%= f.label :image, "写真もどうぞ　" %>
