--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,15 +1,14 @@
-<div class="container">
-  <div class="mycard mx-auto"  style="width: 1000px;">
+<div class="wrapper">
     <div class="card-body col-sm-9">
       <ul class="tab-list list-unstyled">
         <li class="tab tab-active">
-          <%= "月別（支出）" %>
+          <%= "支出" %>
         </li>
         <li class="tab">
-          <%= "月別（収入）" %>
+          <%= "収入" %>
         </li>
         <li class="tab">
-          <%= "年間レポート" %>
+          <%= "年間" %>
         </li>
       </ul>
       <h4 class="card-title"></h4><br>
@@ -26,6 +25,5 @@
           <%= render 'year' %>
         </div>
       </div>
-    </div>
   </div>
 </div>
