--- a/app/views/wants/index.html.erb
+++ b/app/views/wants/index.html.erb
@@ -1,14 +1,14 @@
-<div class="mx-auto" style="width: 900px;">
+<div class="wrapper">
 <% pagename = "これからしたいこと" %>
-  <h1 class="card-title"><%= pagename %></h1>
+<h1 class="card-title"><%= pagename %></h1>
 
 <br><br>
 <table class="table table-hover">
     <thead>
       <tr class="th">
-        <th>No</th>
-        <th>内容</th>
         <th></th>
+        <th>内容</th>
+        <th>予算</th>
         <th></th>
         <th></th>
         <th></th>
@@ -18,10 +18,10 @@
       <% @wants.each do |want| %>
         <% if want.user_id == current_user.id %>
           <tr class="th">
-            <td><%= want[:id] %></td>
+            <td><i class="fa-solid fa-heart"></i></td>
             <td><%= want.memo %></td>
+            <td><%= number_to_currency(want.price, unit: "",separator: ".", delimiter: ",", precision:0) %>円</td>
             <td><%= image_tag want.image.thumb50.url %>
-            <td></td>
             <td><%= link_to "編集", edit_want_path(want.id), class: "link-btn show" %></td>
             <td><%= link_to "削除", want_path(want.id), method: :delete, data: { confirm: '本当に削除しますか？' }, class:"link-btn" %></td>
             <td></td>
@@ -32,9 +32,9 @@
     </tbody>
   </table>
 
-  <div>
-    <%= link_to "新規作成", :new_want, class:"link-btn new" %>
-  </div>
+  <br><br>
+    <%= link_to "追加する", :new_want, class:"submit-color new" %>
+  <br><br>
 
 
 
