--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,17 +1,11 @@
 <footer>
   <% if current_user.present? %>
     <div>
-      <ul class = "link-list">
-        <li><%= link_to "カレンダー", mypage_calendar_users_path, class: "link-color" %></li>
-        <li><%= link_to "レポート", mypage_users_path, class: "link-color" %></li>
-        <li><%= link_to "やりたいこと", :wants, class: "link-color" %></li>
+      <ul class = "link-list footer-btn">
+        <li><%= link_to "カレンダー", mypage_calendar_users_path, class: "footer-color" %></li>
+        <li><%= link_to "レポート", mypage_users_path, class: "footer-color" %></li>
+        <li><%= link_to "やりたいこと", wants_path, class: "footer-color" %></li>
       </ul>
-    </div>
-    <div class="col-sm-9 setting">
-        <%= link_to edit_user_path(current_user) do %>
-          <h3><i class="fa-solid fa-bars" style="color: #212529;"></i></h3>
-          <h3><i class="fa-regular fa-face-smile" style="color: #212529;"></i></h3>
-        <% end %>
     </div>
   <% end %>
 </footer>
