--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta charaset="utf-8">
+    <meta name="viewsport" content="width=devise-width, initial-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -12,9 +14,7 @@
   <body>
     <main>
       <%= render 'layouts/header' %>
-      <% if flash.notice %>
-        <p><%= flash.notice %></p>
-      <% end %>
+      <%= render 'layouts/flash' %>
       <%= yield %>
       <%= render 'layouts/footer' %>
     </main>
