--- a/app/views/outcomes/edit.html.erb
+++ b/app/views/outcomes/edit.html.erb
@@ -1,38 +1,36 @@
-<div class="mx-auto" style="width: 300px;">
-  <% pagename = "編集" %>
-  <h1><%= pagename %></h1>
+<div class="edit">
+<% pagename = "編集" %>
+<h1><%= pagename %></h1><br>
 
   <%= form_with model: @outcome, local: true do |f| %>
-  
     <div>
-      <label>金額　</label><%= f.number_field :price  %>
+      <label>金額　</label><%= f.number_field :price %>
     </div>
+    <br>
     <div>
       <label>メモ　 </label><%= f.text_field :memo %>
     </div>
+    <br><br>
     <div>
-      <div>
-        <%= f.radio_button(:outcome_category_id, 1) %>
-        <%= f.label :outcome_category_id, "食費", {value: 1, style: "display: inline-block;"} %>
-      </div>
-      <div>
-        <%= f.radio_button(:outcome_category_id, 2) %>
-        <%= f.label :outcome_category_id, "文房具", {value: 2, style: "display: inline-block;"} %>
-      </div>
-      <div>
-        <%= f.radio_button(:outcome_category_id, 3) %>
-        <%= f.label :outcome_category_id, "衣服", {value: 3, style: "display: inline-block;"} %>
-      </div>
+      <%= f.radio_button(:outcome_category_id, 1) %>
+      <%= f.label :outcome_category_id, "食費", {value: 1, style: "display: inline-block;"} %>
     </div>
-
+    <div>
+      <%= f.radio_button(:outcome_category_id, 2) %>
+      <%= f.label :outcome_category_id, "文房具", {value: 2, style: "display: inline-block;"} %>
+    </div>
+    <div>
+      <%= f.radio_button(:outcome_category_id, 3) %>
+      <%= f.label :outcome_category_id, "衣服", {value: 3, style: "display: inline-block;"} %>
+    </div><br><br>
     <div>
       <%= f.label :image,"写真" %>
       <%= f.file_field :image %>
     </div>
-
-    <div><%= f.submit "保存する" %></div>
+    <br><br>
+    <div>
+      <%= f.submit "保存する", class:"submit-color edit-btn" %>
+    </div>
   <% end %>
-
-  <div>
-    <%= link_to "この収支を削除する", outcome_path(outcome.id), method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "link-btn" %>
-  </div>
+</div>
+<br><br>
