--- a/app/views/users/calendar.html.erb
+++ b/app/views/users/calendar.html.erb
@@ -1,5 +1,3 @@
-<div class="mx-auto" style="width: 900px;">
-
 <%= month_calendar(events: @incomes + @outcomes) do |date,events| %>
   <%= date %>
   <% events.take(3).each do |event| %>
@@ -16,12 +14,12 @@
 
 
 <br><br>
-<table class="table table-hover">
+<table class="table table-hover wrapper">
     <thead>
       <tr class="th">
         <th>No</th>
         <th>カテゴリー</th>
-        <th>金額(円)</th>
+        <th>金額</th>
         <th>内容</th>
         <th></th>
         <th></th>
@@ -33,34 +31,35 @@
       <% @incomes.each do |income| %>
         <% if income.user_id == current_user.id %>
           <tr class="th">
-            <td><%= income[:id] %></td>
-            <td><%= income.income_category.name %><%= income.user_id %></td>
+            <td><i class="fa-solid fa-piggy-bank"></i></td>
+            <td><%= income.income_category.name %></td>
             <td><%= income.price.to_s(:delimited) %></td>
             <td><%= income.memo %></td>
             <td><%= image_tag income.image.thumb50.url %>
-            <td><%= link_to "詳細", income_path(income), class: "link-btn show" %></td>
-            <td><%= link_to "削除", income_path(income.id), method: :delete, data: { confirm: '本当に削除しますか？' }, class:"link-btn" %></td>
+            <td><%= link_to "編集", edit_income_path(income), class: "link-btn show" %></td>
+            <td><%= link_to "削除", income_path(income), method: :delete, data: { confirm: '本当に削除しますか？' }, class:"link-btn" %></td>
           </tr>
           <tr></tr>
         <% end %>
       <% end %>
+      
       <% @outcomes.each do |outcome| %>
         <% if outcome.user_id == current_user.id %>
           <tr class="th">
-            <td><%= outcome[:id] %></td>
+            <td><i class="fa-solid fa-wallet"></i></i></td>
             <td><%= outcome.outcome_category.name %></td>
             <td><%= outcome.price.to_s(:delimited) %></td>
             <td><%= outcome.memo %></td>
             <td><%= image_tag outcome.image.thumb50.url %>
-            <td><%= link_to "詳細", outcome_path(outcome), class: "link-btn show" %></td>
-            <td><%= link_to "削除", outcome_path(outcome.id), method: :delete, data: { confirm: '本当に削除しますか？' }, class:"link-btn" %></td>
+            <td><%= link_to "編集", edit_outcome_path(outcome), class: "link-btn show" %></td>
+            <td><%= link_to "削除", outcome_path(outcome), method: :delete, data: { confirm: '本当に削除しますか？' }, class:"link-btn" %></td>
           </tr>
           <tr></tr>
         <% end %>
       <% end %>
     </tbody>
   </table>
-</div>
+  <div class="page"><%= paginate @incomes %></div>
 
 
 
